syntax = "proto3";

package common.asset_locks;
option go_package = "/common";

enum LockMechanism {
  HTLC = 0;
}

message AssetLock {
  LockMechanism lockMechanism = 1;
  bytes lockInfo = 2;
}

message AssetClaim {
  LockMechanism lockMechanism = 1;
  bytes claimInfo = 2;
}

message AssetLockHTLC {
  string recipient = 1;
  bytes hash = 2;
  uint64 expiryTimeMillis = 3;
  enum TimeSpec {
    EPOCH = 0;
    DURATION = 1;
  }
  TimeSpec timeSpec = 4;
}

message AssetClaimHTLC {
  string locker = 1;
  bytes hashPreimage = 2;
}
